KBP-26: Made table headers sticky, changed column header sort icon and fixed icon aligning as well.

--- a/static/css/sidebars.css
+++ b/static/css/sidebars.css
@@ -674,7 +674,7 @@ table th, td {
 }
 
 #colActions {
-  width: 50px;
+  width: 50px !important;
 }
 
 .bi-three-dots-vertical {
